Components/Mindtouch Knowledge Migration/Mindtouch Knowledge Migration/objects/Knowledge__kav.object
<CustomObject>
    <fields>
        <fullName>KnowledgeContent__c</fullName>
        <label>Knowledge Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MindtouchExternalId__c</fullName>
        <label>Mindtouch External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RawContent__c</fullName>
        <label>Raw Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>HowTo</fullName>
        <active>true</active>
        <label>How To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference</fullName>
        <active>true</active>
        <label>Reference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Topic</fullName>
        <active>true</active>
        <label>Topic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Videos</fullName>
        <active>true</active>
        <label>Videos</label>
    </recordTypes>
</CustomObject>